# game-project

./: README.md
2DGameEngine/: 2DGameEngine.sln  CMakeLists.txt
2DGameEngine/2DGameEngine/: 2DGameEngine.vcxproj  2DGameEngine.vcxproj.filters  CMakeLists.txt  Game.cpp  Game.h  main.cpp  resource.h
2DGameEngine/2DGameEngine/Sources/: Game.cpp  GameObject.cpp  Rectangle.cpp  TexGameObject.cpp  TextureManager.cpp  main.cpp
2DGameEngine/2DGameEngine/Sources/Headers/: Game.h  GameObject.h  Rectangle.h  TexGameObject.h  TextureManager.h
